[package]
name = "crates-io-metadata"
version = "0.1.0"
edition = "2024"

[features]
scrap = ["reqwest"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true}