[package]
name = "crates-io-metadata"
description = "Parse (and scrap) crates.io to retrieve crate informations & metadata"
authors = ["julien-cpsn"]
version = "0.1.1"
edition = "2024"
license = "MIT"
documentation = "https://github.com/Julien-cpsn/crates-io-metadata"
homepage = "https://github.com/Julien-cpsn/crates-io-metadata"
keywords = ["crates_io", "crate", "metadata"]

[features]
scrap = ["reqwest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true}
